# codegame

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.sqlx/: query-3dc3184c0dee4a06d8ed0a72aa139d5607c30bc2750a4001846714e1eb810687.json  query-63461e4c79902d9654e0d15ec3729865e6bbfda501db09c8172982da884eb736.json  query-71cd2e3d1431093a64c8124c657b4e3ffdbcbf6f6c43e1335f21887c06dcaac7.json  query-84e0cb9d63cd362a5d9ce50d7d4e1556310560675be08cc03a8f8ad77d23012e.json  query-9f172496cabe92dbdd92aa236a672ce0364c36b4ff72174d123f762c5a9ed3f4.json
ai/: README.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-058a3f0a0dd8d773b3b5bbbc75086dee0b522a72b2a21251ef734413014f732f.json  query-24d392da28c8b7b8e5ca3a7637463d72b33518d6108764d5a80efa492526e32d.json  query-253bc9906e4ba0fe8a9a65cc62ca2f0f271f27b58fabea48098579ce24254d8c.json  query-2bae0c3fe41d0550cba5da4cb2d844a25659cbe1408dbd8bdcdc4f622f984f58.json  query-3e1af5d27b1a7cdbb77ae8c95ddd4766f5050c02146d657c774d89e5105ce087.json  query-52afdf4f2c85a1817e27d66a7d969f5f6843f458ae7cfd11ea3640b1453f824c.json  query-562ba2116a622729d9e5c0f4d7c5de165776e81e4de1107c0ca3788c69fb6bf0.json  query-6d6d26e0e0b676d6838d7905dfc2d5671199b67d354a9285e991b0d5eb13d9c6.json  query-8f0ae0df45c2354b78b149454a79c2602fc7ea40691a91ed9eb6b48640af748c.json  query-98fcec935de4827db0058c8def8eb3fcf9c4cd4aee0aff02c4a1efbc0e0d9e94.json  query-a6441610c2adf3632b0c80c84bd24740a8c0c1287c062467dfac51a49aaf5c35.json  query-bb44a3df8977c6e5d4a45fc384c6c35983ea33b898eb30f1781bc14763ed652b.json  query-f948a34e3ebafd84c9480851886db185f6c361a41b8a81cae9f069d893913269.json
backend/migrations/: 20260202235853_create_users_table.down.sql  20260202235853_create_users_table.up.sql  20260204090145_create_games_table.down.sql  20260204090145_create_games_table.up.sql  20260206104025_create_agents_table.down.sql  20260206104025_create_agents_table.up.sql
backend/src/: lib.rs  main.rs
backend/src/models/: agent.rs  game.rs  user.rs
backend/src/prelude/: claims.rs  config.rs  error.rs  state.rs
backend/src/repositories/: agent.rs  game.rs  mod.rs  user.rs
backend/src/routes/: agent.rs  game.rs  health.rs  hello.rs  mod.rs  user.rs
backend/tests/: agent_test.rs  game_test.rs  health_test.rs  hello_test.rs  user_test.rs
backend/tests/common/: mod.rs
docs/: README.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/public/wasm/: robotsumo.d.ts  robotsumo.js  robotsumo_bg.wasm.d.ts
frontend/src/: App.tsx  wasm.d.ts
frontend/src/api/: agents.ts  auth.ts  games.ts
frontend/src/components/: AgentEditor.tsx  AuthModal.tsx  GameDocs.tsx  TopBar.tsx
frontend/src/context/: AuthContext.tsx  AuthContextType.ts  useAuth.ts
frontend/src/pages/: GamePage.tsx  GamesPage.tsx  HomePage.tsx
games/: Cargo.toml
games/robotsumo/: Cargo.toml
games/robotsumo/src/: lib.rs  main.rs
games/snake/: Cargo.toml
games/snake/assets/: default_ai.lua  sprites.ase
games/snake/src/: direction.rs  game.rs  lib.rs  lua_engine.rs  main.rs  rendering.rs  systems.rs  wasm_bridge.rs
scripts/: build-games.sh
(+4 files in other folders)
