[package]
name = "backend"
version = "0.0.2"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-test = "18.7.0"
