[workspace]
resolver = "3"
members = ["robotsumo", "snake"]

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi_threaded",
    "png",
    "webgl2",
    "x11",
] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
