[workspace]
resolver = "3"
members = ["robotsumo", "snake"]

[workspace.package]
version = "0.0.2"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "webgl2",
    "x11",
] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
